fix some UI on mobile

--- a/src/components/schematic/SchematicPage.css
+++ b/src/components/schematic/SchematicPage.css
@@ -1,4 +1,5 @@
 .schematic {
+	position: relative;
 	overflow: auto;
 }
 
@@ -79,28 +80,27 @@
 }
 
 .schematic-info-container {
-	max-height: 90vh;
 	max-width: 90vw;
-	max-height: 90dvh;
 	max-width: 90dvw;
 
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
 
-	padding: 10px;
+	justify-content: space-around;
+	box-sizing: border-box;
+
+	padding: 2rem;
 
 	border-radius: 5px;
 	border: 2px solid var(--light-transparent-background);
-	gap: 1rem;
+	gap: 0.5rem;
 }
 
 .schematic-info-image {
 	display: block;
 	border-radius: 5px;
 	border: 2px solid var(--light-transparent-background);
-
-	aspect-ratio: 1;
 
 	min-width: var(--preview-image-min-size);
 	min-height: var(--preview-image-min-size);
@@ -162,7 +162,7 @@
 	height: 10px;
 	width: 10px;
 
-	position: absolute;
+	position: fixed;
 	transform: translate3d(-50%, -50%, 0);
 	will-change: transform;
 	animation: spin 1.5s linear infinite;
