--- a/src/components/upload/UploadSchematicPage.css
+++ b/src/components/upload/UploadSchematicPage.css
@@ -1,5 +1,5 @@
 .upload {
-	position: absolute;
+	position: relative;
 	color: white;
 	width: 100%;
 	min-height: 100%;
@@ -20,11 +20,13 @@
 
 	gap: 0.5rem;
 
-	height: 90vh;
-	width: 90vw;
-	height: 90dvh;
-	width: 90dvw;
+	width: 80vw;
+	width: 80dvw;
 
+	box-sizing: border-box;
+	justify-content: space-around;
+
+	padding: 2rem;
 	overflow: hidden scroll;
 }
 
