--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,8 @@ body,
 	width: 100%;
 	height: 100%;
 
-	margin: 0;
+	margin: 0px;
+	padding: 0px;
 	z-index: 0;
 }
 
