--- a/src/styles.css
+++ b/src/styles.css
@@ -18,9 +18,9 @@
 	background-image: var(--background-image-1);
 	background-size: cover;
 	background-position: center;
-	filter: brightness(40%);
-	width: 100%;
-	height: 100%;
+	filter: brightness(50%);
+	width: 120%;
+	height: 120%;
 }
 
 .button-transparent {
@@ -94,7 +94,11 @@
 .flexbox-row {
 	display: flex;
 	flex-direction: row;
-	flex-wrap: nowrap;
+	flex-wrap: wrap;
 }
 
-
+.flexbox-column {
+	display: flex;
+	flex-direction: column;
+	flex-wrap: wrap;
+}
